# azure-blobrepo-rpm

./: function_app.py  pyproject.toml  rg.bicep  rg_add_eventgrid.bicep  rg_funcapp.bicep  ruff.toml
.github/workflows/: ci.yml
azure_blobrepo_rpm/: __init__.py  organiser.py  repomanager.py  rpmpackage.py  utils.py
azure_blobrepo_rpm/tooling/: __init__.py  advice.py  azcmd.py  bicep_deployment.py  func_app.py
tests/: conftest.py  test_rpf.py
