[project]
name = "azure-blobrepo-rpm"
description = "Functionality to create an RPM package repository in Azure Blob Storage"
license = "MIT"
version = "0.1.0"
readme = "README.md"
authors = [{name = "Max Dymond", email = "max.dymond@alianza.com"}]
requires-python = '>=3.9,<4.0'
dependencies = ['azure-functions (>=1.21.3,<2.0.0)', 'azure-identity (>=1.19.0,<2.0.0)', 'azure-storage-blob (>=12.24.0,<13.0.0)', 'createrepo-c (>=1.2.1,<2.0.0)', 'rpmfile (>=2.1.0,<3.0.0)', 'zstandard (>=0.23.0,<0.24.0)']

[project.scripts]
create-resources = "azure_blobrepo_rpm.tooling.create_resources:run"

[tool.poetry]
requires-poetry = '>=2.0'

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.11.12"
pytest = "^8.4.0"

[build-system]
requires = ['poetry-core (>=2.0)']
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["function_app.py", "azure_blobrepo_rpm", "tests"]

[[tool.mypy.overrides]]
module = ["rpmfile.*", "createrepo_c.*"]
ignore_missing_imports = true
